# WasmTerminal

./: .gitignore  CONTRIBUTION.md  LICENSE.md  METADATA.md  README.md  WASM TERMINAL.md  package.json
core/: Cargo.toml
core/src/: app.rs  lib.rs
data/: mcp_commands.json
src/: App.jsx  index.jsx
src/utils/: domUtils.jsx
