[package]
name = "datacore_terminal_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
egui = "0.27"
eframe = "0.27"
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"
web-sys = { version = "0.3.66", features = [
    "Window",
    "Document",
    "Element", "WebSocket", "MessageEvent", "FileReader", "Blob", "ProgressEvent",
    "HtmlElement",
    "CssStyleDeclaration",
] }
js-sys = "0.3.66"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
vt100 = "0.16.2"
